--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
-  "name": "issue-with-observebestmatch",
+  "name": "issue-with-observeKnownRangeChunked",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "start": "ts-node index.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@actyx/pond": "^3.0.1",
-    "@types/jest": "^26.0.24",
-    "jest": "^27.0.6",
+    "@actyx/pond": "^3.0.2",
+    "@types/node": "16.4.10",
     "ts-node": "^10.1.0",
-    "typescript": "^4.3.5",
-    "babel-jest": "^26.6.3",
-    "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.7",
-    "@babel/preset-typescript": "^7.14.5"
+    "typescript": "^4.3.5"
   },
   "dependencies": {}
 }
